--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,6 @@ section{
 }
 
 
-
-
 #home{
     width:100%;
     height:100vh;
@@ -244,7 +242,7 @@ section{
     background-color: var(--background);
     padding:5px 20px;
     font-size: 12px;
-    color:var(--primary)
+    color:var(--primary);
 }
 .left-content ul .h-home{
     top:80px;
